# mcp-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent/: .gitignore  ARCHITECTURE.md  DRONE_DECISION.md  README.md  SPEC.md  command_agent.py  main.py  mission_planner.py  reasoning_log.py  requirements.txt
agent/agent/: graph.py  nodes.py  priority_map.json  state.py  utils.py
agent/agent/mcp/: client.py
api/: app.py  mission_runner.py
api/models/: mission.py
api/routers/: mesa.py  missions.py  scenarios.py  tools.py  world.py
mcp_server/: __init__.py  drone_registry.py  drone_simulator.py  mesa_bridge.py  mesh_radio.py  server.py  world_state.py
mcp_server/tools/: __init__.py  battery_tools.py  mesh_tools.py  movement_tools.py  rescue_tools.py  scan_tools.py  status_tools.py  supply_tools.py
scenarios/: battery_crisis.py  default.py  offline_recovery.py  relay.py  rescue_priority.py  supply_run.py  survivor_detect.py  swarm_status.py
test/: test_drone_tools.py  test_scenarios.py
utils/: config.py
